# betbot

./: .gitignore  pyproject.toml
bet_bot/: api_urls.py  asgi.py  settings.py  urls.py  wsgi.py
bets/: admin.py  models.py  serializers.py  urls.py  views.py
bets/migrations/: 0001_initial.py  0002_alter_bet_amount_alter_bet_chosen_winner_and_more.py  0002_initial.py  0003_alter_bet_options.py  0003_remove_bet_option.py  0004_alter_bet_options.py  0004_bet_option.py  0005_remove_bet_option.py  0006_alter_bet_chosen_winner.py  0007_bet_created_at.py  0008_bet_option.py  0009_alter_bet_match.py  0010_betoption_alter_bet_option.py  0011_remove_bet_chosen_winner.py
matches/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
matches/migrations/: 0001_initial.py  0002_alter_match_result.py  0002_match_chance_team1_match_chance_team2_and_more.py  0003_alter_match_odds_draw_alter_match_odds_team1.py  0003_alter_match_start_time_alter_match_team1_and_more.py  0004_alter_match_options.py  0004_match_chance_draw_alter_match_odds_draw_and_more.py  0005_alter_match_options.py  0005_match_notified.py
telegram_bot/: config.py  main.py  scheduler.py  time.py
telegram_bot/api/: bet.py  history.py  matches.py  search.py  users.py
telegram_bot/handlers/: balance.py  bet.py  deposit.py  history.py  menu.py  remove_chat.py  search.py  start.py
telegram_bot/keyboards/: bets.py  inline.py  menu.py
telegram_bot/services/: check_matches.py
telegram_bot/states/: bet.py  (+3 more)
users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
(+7 files in other folders)
